# invest-trading

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
ai/: __init__.py
ai/ensemble/: __init__.py
ai/llm/: __init__.py  graph.py  market_analyst.py  news_analyzer.py
ai/rl/: __init__.py  environment.py  rewards.py  trainer.py
ai/rl/agents/: __init__.py  dqn_agent.py  ppo_agent.py
config/: __init__.py  exchanges.py  settings.py  strategies.py
core/: __init__.py
core/ai/: __init__.py  claude_client.py  models.py  prompts.py
core/engine/: __init__.py  alpaca_connector.py  binance_connector.py  order_manager.py
core/strategies/: __init__.py  base_strategy.py  hybrid_strategy.py  smc_strategy.py
dashboard/: app.py
dashboard/components/: __init__.py
dashboard/pages/: __init__.py
data/: __init__.py
data/collectors/: __init__.py  hyperliquid_whales.py  market_data.py  price_collector.py  sentiment_collector.py
data/features/: __init__.py  technical.py
data/storage/: __init__.py  models.py  repository.py  supabase_client.py
deploy/: ai-review.service  ai-review.timer  paper-trader.service  requirements-paper.txt  setup-vm.sh
journal/: __init__.py  feedback_loop.py  performance.py  trade_logger.py
scripts/: ai_daily_review.py  backtest_strategies.py  check_performance.sh  deploy_edge_function.sh  diag_signals_size.py  diag_signals_timeout.py  init_db.py  live_trade.py  paper_trade_simple.py  perf_deep.py  perf_review.py  prune_signals.py  quick_check.sh  run_backtest.py  run_live.py  run_paper.py  train_rl.py  verify_supabase.py
supabase/: ai_tables.sql  config.toml  cron_setup.sql  schema.sql
tests/: test_basic.py
tests/unit/: test_smc_confluence.py  test_smc_detector.py  test_smc_strategy.py  test_smc_zones.py
(+7 files in other folders)
